# nitidus

.github/workflows/: build.yml
module/src/main/cpp/: CMakeLists.txt  hookMain.cpp  il2cppHook.cpp
module/src/main/cpp/includes/: main.hpp
